--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.3",
     "react-slick": "^0.29.0",
     "styled-components": "5.3.6",
     "styled-icons": "^10.46.0",
@@ -50,6 +51,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/node": "^18.8.0",
     "@types/react": "^18.0.21",
+    "@types/react-select": "^5.0.1",
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.0",
