--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@tanstack/react-table": "^8.9.1",
     "axios": "^0.27.2",
     "caniuse-lite": "^1.0.30001414",
+    "chart.js": "^4.3.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "cookies-next": "^2.1.1",
     "formik": "^2.2.9",
     "next": "12.3.1",
@@ -30,6 +32,7 @@
     "nextjs-progressbar": "^0.0.14",
     "polished": "^4.2.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.3",
     "react-slick": "^0.29.0",
